# shx

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: cmd.rs  lib.rs
tests/: it.rs
