[package]
name = "shx"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["cli", "macro", "shell", "shx"]
description = "Utilities for quick shell scripting in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shx-macros = { path = "./macros" }
thiserror = "1.0.66"
